# AI_Methodology_Churn_Prediction

./: .gitignore  AI_METHODOLOGY_REPORT.md  AI_Methodology_Project_Report.docx  CODE_TEST_RESULTS.md  FINAL_SUMMARY.md  README.md  REPORT_SUMMARY.md  REQUIREMENTS_CHECKLIST.md  SHAP_PLOT_FIX.md  SUBMISSION_GUIDE.md  WORD_DOCUMENT_SUMMARY.md  create_word_report.py  pyproject.toml  requirements.txt  run_pipeline.py
data/: features.csv  processed_data.csv
docs/: model_evaluation_report.txt  shap_explanation_report.txt
models/: best_model.pkl
src/data_preparation/: __init__.py  prepare_data.py
src/explainable_ai/: __init__.py  shap_analysis.py
src/feature_engineering/: __init__.py  create_features.py
src/model_training/: __init__.py  train_model.py
src/prediction/: __init__.py  api.py  predict.py
