[project]
name = "retailgenius-churn-prediction"
version = "0.1.0"
description = "AI project for customer churn prediction at RetailGenius"
authors = [
    {name = "EPITA Student"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
